--- a/wisdomCampus/html/check-detail.html
+++ b/wisdomCampus/html/check-detail.html
@@ -352,6 +352,8 @@
 						setAffairApprovePro(tempData, function(data) {
 							console.log("获取的审批结果:" + JSON.stringify(data));
 							if(data.RspCode == 0) {
+								//触发前往页面的自定义事件,从而进行数据刷新
+								mui.fire(plus.webview.currentWebview().opener(), 'updateNoRead00');
 								com.replyContent = "";
 								com.getDetail();
 								com.replyShow = false;
