--- a/wisdomCampus/html/all-list.html
+++ b/wisdomCampus/html/all-list.html
@@ -367,7 +367,7 @@
 					deceleration: deceleration
 				});
 				var getNotice = function(id, title, callback) { //10.获取发送的通知公告列表
-					$.showLoading();
+//					$.showLoading();
 					console.log("1111111111111" + title)
 					var current_data = datasource[title];
 					var refreshObj = current_data.refreshObj
@@ -389,7 +389,7 @@
 						}
 						getSendNoticePro(tempData, function function_name(data) {
 							console.log(JSON.stringify(data))
-							$.hideLoading();
+//							$.hideLoading();
 							if(data.RspCode == 0) {
 								datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
 								if(datasource[title].refreshObj.refreshFlag == 0) {
@@ -423,7 +423,7 @@
 							pageSize: '10' //每页记录数
 						}
 						getReceiveNoticePro(tempData, function function_name(data) {
-							$.hideLoading();
+//							$.hideLoading();
 							console.log(JSON.stringify(data))
 							if(data.RspCode == 0) {
 								datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
@@ -451,7 +451,7 @@
 
 						getAffairApplyPro(tempData, function function_name(data) {
 							console.log(JSON.stringify(data))
-							$.hideLoading();
+//							$.hideLoading();
 							if(data.RspCode == 0) {
 								datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
 								if(datasource[title].refreshObj.refreshFlag == 0) {
@@ -491,7 +491,7 @@
 						}
 
 						getAffairApprovePro(tempData, function function_name(data) {
-							$.hideLoading();
+//							$.hideLoading();
 							console.log(JSON.stringify(data))
 							if(data.RspCode == 0) {
 								datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
